# engram

./: .gitignore  Cargo.toml  README.md  RELEASING.md
.claude/: hooks.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: hooks.json  pre-compact.sh  session-end.sh  session-start.sh
.claude/skills/: engram.md  reflect.md
.github/workflows/: ci.yml  release.yml  test-mitm.yml
docs/: claude-code-hooks.md  claude-hooks-index.md  claude-hooks-setup.md  mitmproxy-guide.md
docs/explanation/: claude-hooks-engram-integration.md
docs/how-to/: create-custom-hooks.md  customize-hook-scripts.md  install-cli.md  install-hooks-globally.md  install-hooks.md  setup-claude-code.md  troubleshoot-hooks.md
docs/reference/: claude-hooks-reference.md
docs/requirements/: vision.md
docs/requirements/core/: .doorstop.yml  CORE003.yml  CORE005.yml
docs/requirements/feat/: FEAT002.yml  FEAT003.yml  FEAT004.yml  FEAT005.yml  FEAT009.yml  FEAT010.yml  FEAT012.yml
docs/requirements/req/: .doorstop.yml  REQ001.yml
docs/requirements/sys/: SYS001.yml  SYS004.yml  SYS005.yml
docs/tutorials/: getting-started-claude-hooks.md  mitm-setup.md
migrations/: 001_datetime_schema.sql
req/: vision.md
req/core/: CORE001.yml  CORE002.yml  CORE004.yml  CORE006.yml  CORE007.yml
req/feat/: .doorstop.yml  FEAT001.yml  FEAT002.yml  FEAT003.yml  FEAT005.yml  FEAT006.yml  FEAT007.yml  FEAT008.yml  FEAT010.yml  FEAT011.yml  FEAT012.yml  FEAT013.yml  FEAT014.yml  FEAT015.yml
req/sys/: .doorstop.yml  SYS002.yml  SYS003.yml  SYS005.yml  SYS006.yml
src/: AGENT_INSTRUCTIONS.md  db.rs  engram.rs  init.sql  main.rs  tui.rs
src/mitm/: analyzer.rs  client.rs  mod.rs
