[package]
name = "engram"
version = "0.1.0"
edition = "2021"
description = "External agent memory store"

[[bin]]
name = "engram"
path = "src/main.rs"

[[bin]]
name = "engram-mitm"
path = "src/bin/engram_mitm.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"
sha1 = "0.10"
serde_json = "1.0"

# MITM proxy server
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"

# TLS for HTTPS proxy
tokio-native-tls = "0.3"
native-tls = "0.2"
rcgen = "0.13"

# Conversation buffering
serde = { version = "1", features = ["derive"] }
