[package]
name = "engram"
version = "0.1.0"
edition = "2021"
description = "External agent memory store"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
ratatui = "0.29"
crossterm = "0.28"
sha1 = "0.10"
serde_json = "1.0"

# mitmproxy client
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
