[package]
name = "engram"
version = "0.1.0"
edition = "2021"
description = "External agent memory store"
license = "MIT"
repository = "https://github.com/nhomble/engram"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
ratatui = "0.29"
crossterm = "0.28"
sha1 = "0.10"
serde_json = "1.0"
